--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-conference-app",
+  "name": "sss-trust",
   "version": "0.0.0",
   "description": "SSS-Trust App",
   "author": "Ionic Team <hi@ionicframework.com>",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/ionic-conference-app.git"
+    "url": "https://github.com/ionic-team/sss-trust.git"
   },
   "private": true,
   "dependencies": {
